# cmakeGD32

./: CMakeLists.txt  CMakePresets.json  Makefile  arm-none-eabi-gcc.cmake  link.ld  main.c  output.dat.gd32F4FirmWare.dependers  output.dat.mydemo
